Update and rename

--- a/rice-type-classification.ipynb
+++ b/rice-type-classification.ipynb
@@ -776,7 +776,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 1) EDA (Step 3): class distribution + feature histograms + correlation matrix"
+        "# 1) EDA: class distribution + feature histograms + correlation matrix"
       ],
       "metadata": {
         "id": "U1Ot9Py0RcqF"
@@ -1042,7 +1042,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 2) Data preparation (Step 4)"
+        "# 2) Data preparation"
       ],
       "metadata": {
         "id": "WCLMXU4tSHp-"
@@ -1051,7 +1051,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Preprocessing (Step 4): drop id, split train/val/test, scaling\n",
+        "# Preprocessing: drop id, split train/val/test, scaling\n",
         "\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.preprocessing import StandardScaler\n",
@@ -1113,7 +1113,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 3) Modeling (Step 5): kNN + Naive Bayes"
+        "# 3) Modeling: kNN + Naive Bayes"
       ],
       "metadata": {
         "id": "VsZ4skrPTCR-"
@@ -1244,7 +1244,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# 4) Evaluation and model selection (Step 6)"
+        "# 4) Evaluation and model selection"
       ],
       "metadata": {
         "id": "x6sN9T10SvEK"
